outputs/csi300-test/treevoo/2025-07-28_13-33-22/problem_iter4_response3.txt_stdout.txt
Traceback (most recent call last):
  File "/home/renjunji_2023/reevo/problems/csi300/eval.py", line 9, in <module>
    import gpt
  File "/home/renjunji_2023/reevo/problems/csi300/gpt.py", line 3
    # Calculate daily returns for momentum
                                          ^
IndentationError: expected an indented block after function definition on line 2
